- Fully integration of Google Auth for sign in

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=8001
 REACT_APP_API_BASE_URL=http://localhost:3000/api
+
+REACT_APP_GOOGLE_CLIENT_ID=273481354275-6hn110vuhfgvt2sb92dhpclj6gopg7nh.apps.googleusercontent.com
